Bug 253005 - [IFC] Floats never overflow though they may over-constrain the line
Summary: [IFC] Floats never overflow though they may over-constrain the line
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-27 10:30 PST by zalan
Modified: 2023-02-27 16:25 PST (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (17.08 KB, patch)
2023-02-27 10:46 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-02-27 10:30:23 PST
ssia
Comment 1 zalan 2023-02-27 10:46:51 PST
Created attachment 465200 [details]
[fast-cq]Patch
Comment 2 EWS 2023-02-27 16:24:14 PST
Committed 260911@main (bec322fbf04b): <https://commits.webkit.org/260911@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465200 [details].
Comment 3 Radar WebKit Bug Importer 2023-02-27 16:25:22 PST
<rdar://problem/106002051>