Source/WebCore/layout/formattingContexts/inline/InlineLineTypes.h
@@ -64,7 +64,7 @@ struct PreviousLine {
     std::optional<InlineLayoutUnit> trailingOverflowingContentWidth { };
     bool endsWithLineBreak { false };
     TextDirection inlineBaseDirection { TextDirection::LTR };
-    Vector<const InlineItem*> overflowingFloats;
+    Vector<const InlineItem*> suspendedFloats;
 };
 
 inline InlineItemRange::InlineItemRange(InlineItemPosition start, InlineItemPosition end)
